logistics-distributions/security.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "strict-mtls-policy"
  namespace: "logistics-distributions"
spec:
  mtls:
    mode: STRICT
