logistics-distributions/novelties.yaml
##################################################################################################
# novelty service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: novelties-service
  namespace: procurement-supply-optimization
  labels:
    app: novelties-service
    service: novelties-service
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: novelties-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novelties-service-v1
  namespace: procurement-supply-optimization
  labels:
    app: novelties-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: novelties-service
      version: v1
  template:
    metadata:
      labels:
        app: novelties-service
        version: v1
    spec:
      serviceAccountName: medisupply-novelties-service

      containers:
        - name: web
          image: public.ecr.aws/a7x9j8u1/medisupply/logistics-distributions/novelties/web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
