logistics-distributions/trips.yaml
##################################################################################################
# trips service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: trips
  labels:
    app: trips
    service: trips
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: trips
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-v1
  labels:
    app: trips
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
      version: v1
  template:
    metadata:
      labels:
        app: trips
        version: v1
    spec:
      serviceAccountName: medisupply-trips

      containers:
        - name: trips
          image: public.ecr.aws/a7x9j8u1/medisupply/logistics-distributions/trips-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
