logistics-distributions/vehicles.yaml
##################################################################################################
# vehicles service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: vehicles
  labels:
    app: vehicles
    service: vehicles
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: vehicles
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicles-v1
  labels:
    app: vehicles
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehicles
      version: v1
  template:
    metadata:
      labels:
        app: vehicles
        version: v1
    spec:
      serviceAccountName: medisupply-vehicles

      containers:
        - name: vehicles
          image: public.ecr.aws/a7x9j8u1/medisupply/logistics-distributions/vehicles-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
