logistics-distributions/external-services.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: route-db-and-vehicle-db
spec:
  hosts:
    - dynamodb.us-east-2.amazonaws.com
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "*"
